--- a/style/main.css
+++ b/style/main.css
@@ -20,6 +20,7 @@ header .container {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+
 }
 
 header .logo {
@@ -54,22 +55,44 @@ header nav a:hover {
 
 }
 
+.container{
+    margin-left: 30px;
+}
+
 .filme-principal .descricao{
+    margin-top: 10px;
     margin-bottom: 30px;
 }
 
 .filme-principal .titulo{
-    margin-top: 15%;
+    margin-top: 15px;
     font-size: 40px;
     font-family: 'Trebuchet MS', Arial, sans-serif;
 }
 
-.filme-principal .botao{
+.botao{
     background-color: rgba(0,0,0,.50);
     border: none;
     color: white;
 
     padding: 15px 30px;
     margin-right: 15px;
-    font-size:12px
+    font-size:12px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+
+}
+
+.botao:hover{
+    background-color: white;
+    color: black;
+}
+
+.botao i{
+    margin-right: 8px;
+}
+
+.filme-principal .container {
+    width: 70%;
 }
