--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,12 +1,17 @@
 @media screen and (max-width:700px){
-    hearder .container{
+    header .container{
     display: flex;    
     flex-direction: column;
     }
 
     .botao {
         margin-top: 5px;
-        width: 190px;
-        height: 60px;
+        width: 300px;
+    }
+}
+
+@media screen and (min-width:1000px) {
+    .descricao{
+        width: 50%;
     }
 }
